kubernetes/lab/06-ingress/jira/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jira.brainupgrade.in
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - jira.brainupgrade.in
    secretName: jira.brainupgrade.in
  rules:
    - host: jira.brainupgrade.in
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: jira
              servicePort: 8080
